# computer-brand-ml

./: .gitignore  pyproject.toml
app/: main.py  models.py
data/: README.md
feature_repo/: feature_definition.py
feature_repo/data/: features.parquet
notebooks/: explore.ipynb  modeling.ipynb
utils/: numerical_to_cat.py
