[tool.poetry]
name = "computer-brand-ml"
version = "0.1.0"
description = ""
authors = ["gunblasterXTO <naufal.abdila@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
imbalanced-learn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
