[tool.poetry]
name = "computer-brand-ml"
version = "0.1.0"
description = ""
authors = ["gunblasterXTO <naufal.abdila@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "1.5.3"
xgboost = "^2.0.3"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
feast = "^0.36.0"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
imbalanced-learn = "^0.12.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
